--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="./style/main.css">
     <title>WELCOME</title>
   </head>
   <body>
-    <h1>WELCOME USER</h1>
+    <p class="h2 h1">WELCOME USER</p>
   </body>
 </html>
