--- a/index.html
+++ b/index.html
@@ -1,11 +1,155 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="./style/main.css">
-    <title>WELCOME</title>
-  </head>
-  <body>
-    <p class="h2 h1">WELCOME USER</p>
-  </body>
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+<style>
+.nav-tabs {
+  width: 100%;
+}
+.modal-header, h4, .close {
+     background-color: #5cb85c;
+     color:white !important;
+     text-align: center;
+     font-size: 30px;
+ }
+ .modal-footer, .page-header {
+     background-color: #f9f9f9;
+ }
+ .margin {
+   margin: 0;
+   padding: 0;
+ }
+ header {
+   background-color: black;
+ }
+ img.center {
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
+ }
+</style>
+</head>
+<body>
+<div class="container-fluid margin">
+    <header>
+        <img src="pic/logoname.png" class="img-responsive"alt="" />
+     </header>
+        <nav class="navbar navbar-primary">
+          <div class="container-fluid navbar-collapse">
+            <ul class="nav nav-tabs navbar-nav">
+            <li>
+              <div id="myBurger" class="burger">
+              <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+              <a href="#">About</a>
+              <a href="#">Facts</a>
+              <a href="#">Results</a>
+              <a href="#">Feature</a>
+            </div>
+            <div id="cmain">
+              <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+            </div>
+        </li>
+        <li style="margin-left:20px;" class="nav navbar-nav navbar-right"><a href="#" data-toggle="modal" data-target="#login"><span class="glyphicon glyphicon-log-in"></span>Login</a></li>
+                    <div class="modal fade" role="dialog" id="login">
+                        <div class="modal-dialog">
+                           <!--content-->
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                      <h4 class="modal-title">Enter your Account</h4>
+                                </div>
+                                <div class="modal-body">
+
+                                </div>
+                                <div class="modal-footer">
+                                      <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                                </div>
+                              </div>
+                        </div>
+                    </div>
+        <li style="margin-left:20px;" class="nav navbar-nav navbar-right"><a href="#" data-toggle="modal" data-target="#signup"><span class="glyphicon glyphicon-user"></span> Sign UP</a></li>
+                  <div class="modal fade" role="dialog" id="signup">
+                      <div class="modal-dialog">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                  <h4 class="modal-title">Registration or Sign Up</h4>
+                            </div>
+                            <div class="modal-body">
+
+                            </div>
+                            <div class="modal-footer">
+                                    <button type="button" class="btn btn-warning" data-dismiss="modal">Cancel</button>
+                            </div>
+                          </div>
+                      </div>
+                  </div>
+            </ul>
+          </div>
+        </nav>
+        <script>
+        function openNav() {
+            document.getElementById("myBurger").style.width = "250px";
+            document.getElementById("main").style.marginLeft = "250px";
+            document.body.style.backgroundColor = "rgba(0,0,0,0.4)";
+        }
+
+        function closeNav() {
+            document.getElementById("myBurger").style.width = "0";
+            document.getElementById("main").style.marginLeft= "0";
+            document.body.style.backgroundColor = "white";
+        }
+        </script>
+<!--center information-->
+<div class="col-sm-12 well">
+          <a href="#">
+              <img src="pic/shake.png" alt="" class="img-responsive center" width="500" /></a>
+                      <p style="text-align:center;font-family:verdana;">Hands Shakes</p>
+</div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-6 well">
+      <h3>Information System</h3>
+      <a href="#">
+          <img src="pic/it.jpg" alt="" class="img-responsive center" width="500" /></a>
+                  <p style="text-align:center;font-family:verdana;">Business Analyst</p>
+    </div>
+    <div class="col-sm-6 well">
+      <h3>Information technology</h3>
+      <a href="#">
+          <img src="pic/is.jpg" alt="" class="img-responsive center" width="500" /></a>
+                  <p style="text-align:center;font-family:verdana;">Database Administrator</p>
+    </div>
+    <div class="col-sm-12 well">
+        <p style="font-size:30px;font-family:verdana;text-align:center;">
+          Make Us Proud and Let The World Who We Are!
+        </p>
+            <ul class="pager">
+                <li><a href="#" data-toggle="modal" data-target="#login">Log In</a></li>
+                <li><a href="#" data-toggle="modal" data-target="#signup">Sign Up</a></li>
+            </ul>
+    </div>
+  </div>
+</div>
+<footer>
+  <p>F</p>
+  <p>O</p>
+  <p>0</p>
+  <p>T</p>
+  <p>E</p>
+  <p>R</p>
+  <br>
+  <p>H</p>
+  <p>E</p>
+  <p>R</p>
+  <p>E</p>
+</footer>
+</body>
 </html>
