--- a/charts/chartResult.html
+++ b/charts/chartResult.html
@@ -7,11 +7,23 @@
   </head>
   <body>
     <div class="chart-container">
-      <!-- <canvas id="chartGender"></canvas>
-      <canvas id="BSISchartCivilStatus"></canvas>
-      <canvas id="BSITchartCivilStatus"></canvas>
-      <canvas id="chartQuestion1"></canvas> -->
-     <canvas id="chartQuestion2"></canvas>
+      <!-- <canvas id="chartGender"></canvas> -->
+      <!-- <canvas id="BSISchartCivilStatus"></canvas> -->
+      <!-- <canvas id="BSITchartCivilStatus"></canvas> -->
+      <!-- <canvas id="ISchartQuestion2"></canvas> -->
+      <!-- <canvas id="ITchartQuestion2"></canvas> -->
+      <!-- <canvas id="ISchartQuestion3"></canvas> -->
+      <!-- <canvas id="ITchartQuestion3"></canvas> -->
+      <!-- <canvas id="ISchartQuestion4"></canvas> -->
+      <!-- <canvas id="ITchartQuestion4"></canvas> -->
+      <!-- <canvas id="ITchartQuestion5"></canvas>
+      <canvas id="ISchartQuestion5"></canvas> -->
+      <!-- <canvas id="ITchartQuestion6"></canvas> -->
+      <!-- <canvas id="ISchartQuestion6"></canvas> -->
+      <canvas id="ITchartQuestion7"></canvas>
+      <canvas id="ISchartQuestion7"></canvas>
+
+     <!-- <canvas id="chartQuestion2"></canvas> -->
     </div>
 
 
@@ -25,8 +37,20 @@
     <!-- <script src="js/pie.js"></script>
     <script src="js/BSIScivilStatusChart.js"></script>
     <script src="js/BSITcivilStatusChart.js"></script> -->
-    <!-- <script src="js/BSIScharts/BSISQ1chart.js"></script> -->
-    <script src="js/BSIScharts/BSISQ2chart.js"></script>
+    <!-- <script src="js/BSITcharts/BSITQ2chart.js"></script> -->
+    <!-- <script src="js/BSIScharts/BSISQ2chart.js"></script> -->
+    <!-- <script src="js/BSITcharts/BSITQ3chart.js"></script> -->
+    <!-- <script src="js/BSIScharts/BSISQ3chart.js"></script> -->
+    <!-- <script src="js/BSITcharts/BSITQ4chart.js"></script> -->
+    <!-- <script src="js/BSIScharts/BSISQ4chart.js"></script> -->
+    <!-- <script src="js/BSITcharts/BSITQ5chart.js"></script> -->
+    <!-- <script src="js/BSIScharts/BSISQ5chart.js"></script> -->
+    <!-- <script src="js/BSITcharts/BSITQ6chart.js"></script> -->
+    <!-- <script src="js/BSIScharts/BSISQ6chart.js"></script> -->
+    <script src="js/BSITcharts/BSITQ7chart.js"></script>
+    <script src="js/BSIScharts/BSISQ7chart.js"></script>
+
+
 
   </body>
 </html>
